5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1638_2731.log
== TEST (2019-05-30 12:09:32) 
-- CODE:
a = float(input("abcissas: "))
b = float(input("ordenadas: "))
r = float(input("raio: "))


c = (x−a)2+(y−b)**2-r**2

if (y>0 ):
	print("Superiores")
elif(y<0 ) :
	print("Inferiores")

-- ERROR:
File "XXXX", line 6
    c = (x−a)2+(y−b)**2-r**2
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:12:48) 
-- CODE:
a = float(input("abcissas: "))
b = float(input("ordenadas: "))
r = float(input("raio: "))


x = a**2-(r**2/2)
y = b**2-(r**2/2)

if (y>0 ):
	print("Superiores")
elif(y<0 ) :
	print("Inferiores")

-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:13:23) 
-- CODE:
a = float(input("abcissas: "))
b = float(input("ordenadas: "))
r = float(input("raio: "))


x = a**2-(r**2/2)
y = b**2-(r**2/2)

if (y<0 ):
	print("Superiores")
elif(y>0 ) :
	print("Inferiores")

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:13:36) 
-- CODE:
a = float(input("abcissas: "))
b = float(input("ordenadas: "))
r = float(input("raio: "))


x = a**2-(r**2/2)
y = b**2-(r**2/2)

if (y<0 ):
	print("Superiores")
elif(y>0 ) :
	print("Inferiores")

-- EXECUTION TIME:
0.158584
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:14:47) 
-- CODE:
a = float(input("abcissas: "))
b = float(input("ordenadas: "))
r = float(input("raio: "))


x = a**2-(r**2/2)
y = b**2-(r**2/2)

if (b > 0 ):
	print("Superiores")
elif(b<0 ) :
	print("Inferiores")

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:15:08) 
-- CODE:
a = float(input("abcissas: "))
b = float(input("ordenadas: "))
r = float(input("raio: "))


x = a**2-(r**2/2)
y = b**2-(r**2/2)

if (b > 0 ):
	print("Superiores")
elif(b<0 ) :
	print("Inferiores")

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:15:11) 
-- CODE:
a = float(input("abcissas: "))
b = float(input("ordenadas: "))
r = float(input("raio: "))


x = a**2-(r**2/2)
y = b**2-(r**2/2)

if (b > 0 ):
	print("Superiores")
elif(b<0 ) :
	print("Inferiores")

-- EXECUTION TIME:
0.137287
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
